----------------------------------------------------------------------------

SimGrid (3.27.1) NOT RELEASED YET (v3.28 expected June 21. 2021, 03:32 UTC)

New features:
 - C++ platform interface: Users can now describe their platform directly in C++.
   This provides greatly flexibility and performance improvement for complex
   platforms. Main features:
     - Fat-Tree/DragonFly/Torus composing: allows you to create clusters of
       "zones", instead of single hosts. This feature enables the description
       of clusters with complex hosts, composed of several CPUs, GPUs, etc.
     - StarZone: new zone with a Star-like topology. The routes are defined
       as a set of links used to communicate from node to everybody (node<->ALL).
     - Split-Duplex links: auxiliary method to create split-duplex links in
       the platform, easing its utilisation. It automatically creates both UP
       and DOWN links (similarly as done in XML).
     - Please refer to the documentation and the examples included:
       e.g. examples/cpp/clusters-multicpu/ and examples/platforms/*.cpp.
 - New plugin: Producer-Consumer with monitor. Just requires to include the
   include/simgrid/plugins/ProducerConsumer.hpp header to be used. See the
   associated example (examples/cpp/plugin-prodcons).

S4U:
 - New: s4u::Comm::wait_all_for() (like s4u::Comm::wait_all, but with a timeout),
        s4u::Io::wait_any(), s4u::Io::wait_any_for().
 - Methods test_all/test_any/wait_all/wait_any in s4u now take their vector
   parameter by reference, instead of a pointer.
 - Fixed a bug where Activity::wait_for() killed the activity on timeout.
   Explicitly cancel the activity to get back to previous behavior.
 - New: Link::set_concurrency_limit() to limit the amount of concurrent flows.

SMPI:
 - The default SMPI compiler flags are no more taken from the environment.
   They can be explicitly set through cmake parameters SMPI_C_FLAGS,
   SMPI_CXX_FLAGS, or SMPI_Fortran_FLAGS.
 - New options: